--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,7 @@
     "standard-jsx",
     "standard-react"
   ],
-  "plugins": [
-    "only-warn"
-  ],
+  "plugins": ["only-warn"],
   "rules": {
     "comma-dangle": [
       "error",
@@ -20,6 +18,13 @@
         "functions": "always-multiline"
       }
     ],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "ignoreRestSiblings": true
+      }
+    ]
   }
 }
