--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,4 @@
 {
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "standard",
-    "standard-jsx",
-    "standard-react"
-  ],
-  "plugins": ["only-warn"],
-  "rules": {
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "always-multiline"
-      }
-    ],
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "ignoreRestSiblings": true
-      }
-    ]
-  }
+  "extends": "./.eslintrc-default.json",
+  "plugins": ["only-warn"]
 }
