--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": "./.eslintrc-default.json",
-  "plugins": ["only-warn"]
+	"extends": "./.eslintrc-default.json",
+	"plugins": ["only-warn", "prettier"]
 }
