--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/styled-components": "5.1.14",
+    "@types/marked": "3.0.1",
 		"babel-eslint": "10.1.0",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-config-standard": "16.0.3",
@@ -34,6 +35,7 @@
 		"eslint-plugin-promise": "5.1.0",
 		"eslint-plugin-react": "7.25.1",
 		"husky": "7.0.2",
+    "marked": "3.0.4",
 		"normalize.css": "8.0.1",
 		"prettier": "2.4.1",
 		"react": "^17.0.2",
