--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"husky": "7.0.2",
     "marked": "3.0.4",
 		"normalize.css": "8.0.1",
+    "highlight.js": "11.2.0",
 		"prettier": "2.4.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
